@@ -33,6 +33,16 @@ name|java
 operator|.
 name|io
 operator|.
+name|FileNotFoundException
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|io
+operator|.
 name|IOException
 import|;
 end_import
@@ -2812,7 +2822,7 @@ name|String
 name|filePath
 parameter_list|)
 throws|throws
-name|MalformedURLException
+name|IOException
 block|{
 try|try
 block|{
@@ -2849,6 +2859,21 @@ name|isAbsolute
 argument_list|()
 condition|)
 block|{
+if|if
+condition|(
+operator|!
+name|incFile
+operator|.
+name|exists
+argument_list|()
+condition|)
+block|{
+throw|throw
+operator|new
+name|FileNotFoundException
+argument_list|()
+throw|;
+block|}
 return|return
 name|incFile
 operator|.
@@ -2894,6 +2919,21 @@ argument_list|()
 argument_list|)
 argument_list|)
 decl_stmt|;
+if|if
+condition|(
+operator|!
+name|settingsFile
+operator|.
+name|exists
+argument_list|()
+condition|)
+block|{
+throw|throw
+operator|new
+name|FileNotFoundException
+argument_list|()
+throw|;
+block|}
 return|return
 operator|new
 name|File
@@ -3031,6 +3071,8 @@ operator|+
 name|propFilePath
 argument_list|)
 expr_stmt|;
+try|try
+block|{
 name|URL
 name|fileUrl
 init|=
@@ -3048,6 +3090,15 @@ argument_list|,
 name|override
 argument_list|)
 expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|FileNotFoundException
+name|e
+parameter_list|)
+block|{
+comment|// ignore...
+block|}
 block|}
 if|else if
 condition|(
