@@ -3158,6 +3158,68 @@ expr_stmt|;
 block|}
 specifier|public
 name|void
+name|testPropertiesMissingFile
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|IvySettings
+name|settings
+init|=
+operator|new
+name|IvySettings
+argument_list|()
+decl_stmt|;
+name|XmlSettingsParser
+name|parser
+init|=
+operator|new
+name|XmlSettingsParser
+argument_list|(
+name|settings
+argument_list|)
+decl_stmt|;
+name|parser
+operator|.
+name|parse
+argument_list|(
+name|XmlSettingsParserTest
+operator|.
+name|class
+operator|.
+name|getResource
+argument_list|(
+literal|"ivysettings-properties-missing-file.xml"
+argument_list|)
+argument_list|)
+expr_stmt|;
+comment|// no error must have been thrown, check that the parsing didn't stop...
+name|DependencyResolver
+name|defaultResolver
+init|=
+name|settings
+operator|.
+name|getDefaultResolver
+argument_list|()
+decl_stmt|;
+name|assertNotNull
+argument_list|(
+name|defaultResolver
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"libraries"
+argument_list|,
+name|defaultResolver
+operator|.
+name|getName
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+specifier|public
+name|void
 name|testInclude
 parameter_list|()
 throws|throws
